# sls2wsgi

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
src/sls2wsgi/: app.py  dev_server.py
